--- a/package.json
+++ b/package.json
@@ -33,14 +33,14 @@
     "node": "16"
   },
   "dependencies": {
-    "@babel/core": "^7.17.9",
-    "@babel/preset-env": "^7.16.11",
-    "babel-loader": "^8.2.4",
-    "copy-webpack-plugin": "^10.2.4",
-    "dayjs": "^1.11.1",
+    "@babel/core": "7.17.9",
+    "@babel/preset-env": "7.16.11",
+    "babel-loader": "8.2.4",
+    "copy-webpack-plugin": "10.2.4",
+    "dayjs": "1.11.1",
     "he": "1.2.0",
-    "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.8.1"
+    "webpack": "5.72.0",
+    "webpack-cli": "4.9.2",
+    "webpack-dev-server": "4.8.1"
   }
 }
